--- a/package.json
+++ b/package.json
@@ -16,25 +16,51 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/cerebras": "^0.1.9",
+    "@ai-sdk/google": "^1.1.12",
+    "@ai-sdk/groq": "^1.1.8",
+    "@ai-sdk/openai-compatible": "^0.1.9",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.50.0",
-    "@trpc/client": "^11.0.0-rc.446",
-    "@trpc/react-query": "^11.0.0-rc.446",
-    "@trpc/server": "^11.0.0-rc.446",
-    "ai": "^4.1.37",
+    "ai": "^4.1.41",
+    "babel-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.4.3",
     "geist": "^1.3.0",
+    "jsdom": "^26.0.0",
+    "lucide-react": "^0.475.0",
+    "motion": "^12.4.2",
     "next": "^15.0.1",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.3",
+    "react-router": "^7.1.5",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
+    "sonner": "^1.7.4",
     "superjson": "^2.2.1",
-    "zod": "^3.23.3"
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/turndown": "^5.0.5",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
