--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@ai-sdk/cerebras": "^0.1.9",
     "@ai-sdk/google": "^1.1.12",
     "@ai-sdk/groq": "^1.1.8",
-    "@ai-sdk/openai-compatible": "^0.1.9",
+    "@openrouter/ai-sdk-provider": "^0.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -33,6 +33,8 @@
     "babel-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dexie": "^4.0.11",
+    "dexie-react-hooks": "^1.1.7",
     "framer-motion": "^12.4.3",
     "jsdom": "^26.0.0",
     "lucide-react": "^0.475.0",
@@ -43,6 +45,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.3",
     "react-router": "^7.1.5",
+    "react-router-dom": "^7.1.5",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
