--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "next build",
     "check": "next lint && tsc --noEmit",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "next lint",
@@ -36,14 +36,16 @@
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
     "framer-motion": "^12.4.3",
+    "highlight.js": "^11.11.1",
     "jsdom": "^26.0.0",
     "lucide-react": "^0.475.0",
+    "markdown-it": "^14.1.0",
     "motion": "^12.4.2",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.3",
+    "react-markdown": "^10.0.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
     "rehype-highlight": "^7.0.2",
@@ -53,16 +55,16 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "turndown": "^7.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/highlight.js": "^10.1.0",
     "@types/jsdom": "^21.1.7",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/turndown": "^5.0.5",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
