--- a/package.json
+++ b/package.json
@@ -40,16 +40,15 @@
     "jsdom": "^26.0.0",
     "lucide-react": "^0.475.0",
     "markdown-it": "^14.1.0",
+    "markdown-it-katex": "^2.0.3",
     "motion": "^12.4.2",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^10.0.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
-    "rehype-highlight": "^7.0.2",
-    "remark-gfm": "^4.0.1",
+    "rehype-katex": "^7.0.1",
     "server-only": "^0.0.1",
     "sonner": "^1.7.4",
     "superjson": "^2.2.1",
