--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -64,6 +65,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/turndown": "^5.0.5",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
