--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@ai-sdk/cerebras": "^0.1.9",
     "@ai-sdk/google": "^1.1.12",
     "@ai-sdk/groq": "^1.1.8",
+    "@kinde-oss/kinde-auth-nextjs": "^2.5.1",
+    "@libsql/client": "^0.14.0",
     "@openrouter/ai-sdk-provider": "^0.2.1",
+    "@prisma/adapter-libsql": "^6.4.1",
+    "@prisma/client": "^6.4.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -29,7 +33,10 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tailwindcss/typography": "^0.5.16",
-    "@tanstack/react-query": "^5.50.0",
+    "@tanstack/react-query": "4",
+    "@trpc/client": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "ai": "^4.1.41",
     "babel-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
     "class-variance-authority": "^0.7.1",
@@ -45,6 +52,7 @@
     "motion": "^12.4.2",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
+    "prisma": "^6.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.5",
@@ -55,6 +63,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "trpc": "^0.11.3",
     "turndown": "^7.2.0",
     "zod": "^3.24.2"
   },
