--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@ai-sdk/google": "^1.1.12",
     "@ai-sdk/groq": "^1.1.8",
     "@kinde-oss/kinde-auth-nextjs": "^2.5.1",
-    "@libsql/client": "^0.14.0",
+    "@libsql/client": "0.8.0",
     "@openrouter/ai-sdk-provider": "^0.2.1",
     "@prisma/adapter-libsql": "^6.4.1",
     "@prisma/client": "^6.4.1",
