fix production errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
     "plugins": [{ "name": "next" }],
     "incremental": true,
 
+    "rootDir": ".",
+
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
