--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "prisma generate && next build prisma db push",
+    "build": "prisma generate && next build && prisma db push",
     "check": "next lint && tsc --noEmit",
     "dev": "next dev",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
@@ -16,12 +16,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ai-sdk/cerebras": "^0.1.9",
-    "@ai-sdk/google": "^1.1.12",
-    "@ai-sdk/groq": "^1.1.8",
+    "@ai-sdk/cerebras": "^0.1.11",
+    "@ai-sdk/google": "^1.1.16",
+    "@ai-sdk/groq": "^1.1.10",
     "@kinde-oss/kinde-auth-nextjs": "^2.5.1",
     "@libsql/client": "0.8.0",
-    "@openrouter/ai-sdk-provider": "^0.2.1",
+    "@openrouter/ai-sdk-provider": "^0.2.2",
     "@prisma/adapter-libsql": "^6.4.1",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -33,58 +33,58 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tailwindcss/typography": "^0.5.16",
-    "@tanstack/react-query": "4",
+    "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
-    "ai": "^4.1.41",
-    "babel-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
+    "ai": "^4.1.45",
+    "babel-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
-    "framer-motion": "^12.4.3",
+    "framer-motion": "^12.4.7",
     "highlight.js": "^11.11.1",
     "jsdom": "^26.0.0",
     "lucide-react": "^0.475.0",
     "markdown-it": "^14.1.0",
     "markdown-it-katex": "^2.0.3",
-    "motion": "^12.4.2",
-    "next": "^15.0.1",
+    "motion": "^12.4.7",
+    "next": "^15.1.7",
     "next-themes": "^0.4.4",
     "prisma": "^6.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.5",
-    "react-router-dom": "^7.1.5",
+    "react-router": "^7.2.0",
+    "react-router-dom": "^7.2.0",
     "rehype-katex": "^7.0.1",
     "server-only": "^0.0.1",
     "sonner": "^1.7.4",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^3.0.1",
+    "superjson": "^2.2.2",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "trpc": "^0.11.3",
     "turndown": "^7.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.10",
+    "@types/eslint": "^8.56.12",
     "@types/highlight.js": "^10.1.0",
     "@types/jsdom": "^21.1.7",
     "@types/markdown-it": "^14.1.2",
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20.17.19",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@types/turndown": "^5.0.5",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.1",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.5.3"
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.1.7",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
